--- a/backend/package.json
+++ b/backend/package.json
@@ -21,5 +21,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "ts-node": "^10.9.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
