--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-PORT='3003'
-DB_HOST='localhost'
-DB_USER='root'
-DB_PASSWORD='Angie2024Mysql'
-DB_NAME='inventario'
-DB_PORT='3306'
+# Created by Vercel CLI
+DB_HOST="localhost"
+DB_NAME="inventario"
+DB_PASSWORD="Angie2024Mysql"
+DB_PORT="3306"
+DB_USER="root"
