--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "postinstall": "npm install mysql2",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -14,7 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mysql2": "^3.13.0",
+    "mysql2": "^3.14.0",
     "sequelize": "^6.37.6"
   },
   "devDependencies": {
@@ -23,6 +24,6 @@
     "ts-node": "^10.9.2"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.17.0"
   }
 }
